Trying to figure out remaining issue with xstream launch exceptions with jdk 18+